# zaira

./: .gitignore  AGENTS.md  LICENSE  README.md  integration_test.py  pyproject.toml  wiki_integration_test.py
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_attach.py  test_boards.py  test_comment.py  test_config.py  test_confluence_api.py  test_create.py  test_dashboard.py  test_edit.py  test_export.py  test_fields.py  test_info.py  test_init.py  test_jira_client.py  test_link.py  test_mdconv.py  test_mocking.py  test_my.py  test_project.py  test_refresh.py  test_report.py  test_transition.py  test_types.py  test_wiki.py
zaira/: __init__.py  __main__.py  attach.py  boards.py  cli.py  comment.py  config.py  confluence_api.py  create.py  dashboard.py  edit.py  export.py  info.py  init.py  jira_client.py  link.py  mdconv.py  my.py  project.py  refresh.py  report.py  sync.py  transition.py  types.py  wiki.py
